--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "poles_ess_website",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-datepicker": "^1.9.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "tailwindcss": "^1.5.2",
     "turbolinks": "^5.2.0"
   },
