--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-datepicker": "^1.9.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "stimulus": "^1.1.1",
     "tailwindcss": "^1.5.2",
     "turbolinks": "^5.2.0"
   },
