--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/credentials/staging.key
+/config/credentials/development.key
+
 
 /public/packs
 /public/packs-test
