--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "autoprefixer": "^9",
     "bootstrap": "^4.5.0",
     "bootstrap-datepicker": "^1.9.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "postcss": "^7",
     "stimulus": "^1.1.1",
-    "tailwindcss": "^1.5.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
