--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "postcss": "^7",
+    "sortablejs": "^1.12.0",
     "stimulus": "^1.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "trix": "^1.2.0",
