Add webpack speed measure

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "speed-measure-webpack-plugin": "^1.4.2",
     "webpack-dev-server": "^3.11.0"
   }
 }
