--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,39 +9,12 @@ local:
 
 openstack:
   service: OpenStack
-  container: <%= Rails.application.credentials.dig(:openstack, :container) %>
+  container: <%= ENV['OPENSTACK_CONTAINER'] %>
   credentials:
-    openstack_auth_url: <%= Rails.application.credentials.dig(:openstack, :auth_url) %>
-    openstack_username: <%= Rails.application.credentials.dig(:openstack, :username) %>
-    openstack_api_key: <%= Rails.application.credentials.dig(:openstack, :api_key) %>
-    openstack_region: <%= Rails.application.credentials.dig(:openstack, :region) %>
-    openstack_temp_url_key: <%= Rails.application.credentials.dig(:openstack, :temp_url_key) %>
+    openstack_auth_url: <%= ENV['OPENSTACK_AUTH_URL'] %>
+    openstack_username: <%= ENV['OPENSTACK_USERNAME'] %>
+    openstack_api_key: <%= ENV['OPENSTACK_API_KEY'] %>
+    openstack_region: <%= ENV['OPENSTACK_REGION'] %>
+    openstack_temp_url_key: <%= ENV['OPENSTACK_TEMP_URL_KEY'] %>
   connection_options: # optional
     chunk_size: 2097152 # 2MBs - 1MB is the default
-
-# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
-
-# Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket
-
-# Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
-# microsoft:
-#   service: AzureStorage
-#   storage_account_name: your_account_name
-#   storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
-#   container: your_container_name
-
-# mirror:
-#   service: Mirror
-#   primary: local
-#   mirrors: [ amazon, google, microsoft ]
