Add newsletter subscription form

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-MAILJET_API_KEY=
-MAILJET_SECRET=
 OPENSTACK_API_KEY=
 OPENSTACK_AUTH_URL=
 OPENSTACK_CONTAINER=
 OPENSTACK_REGION=
 OPENSTACK_TEMP_URL_KEY=
 OPENSTACK_USERNAME=
+
+SENDINBLUE_API_KEY=
+SENDINBLUE_USER_NAME=
+SENDINBLUE_SMTP_KEY=
+SENDINBLUE_NEWSLETTER_ID=
