--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ SENDINBLUE_API_KEY=
 SENDINBLUE_USER_NAME=
 SENDINBLUE_SMTP_KEY=
 SENDINBLUE_NEWSLETTER_ID=
+
+HOST_NAME=localhost
+PORT=3000
+RACK_ENV=development
