--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 /config/master.key
 /config/credentials/staging.key
 /config/credentials/development.key
+/config/credentials/production.key
 
 
 /public/packs
