--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fullhuman/postcss-purgecss": "^4.0.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.0.3-2",
     "@rails/activestorage": "^6.0.0",
